--- a/.mergify.yml
+++ b/.mergify.yml
@@ -29,6 +29,9 @@ pull_request_rules:
           - check-success=Lint / CSS
           - check-skipped=Lint / CSS
       - or:
+          - check-success=Lint / Docker Compose
+          - check-skipped=Lint / Docker Compose
+      - or:
           - check-success=Lint / Dockerfile
           - check-skipped=Lint / Dockerfile
       - or:
