--- a/data-catalog/lakekeeper/docker-compose.development.yaml
+++ b/data-catalog/lakekeeper/docker-compose.development.yaml
@@ -1,89 +1,26 @@
 # https://docs.docker.com/reference/compose-file/
 ---
+name: lakekeeper-development
 services:
-  minio:
-    image: docker.io/minio/minio:RELEASE.2025-09-07T16-13-09Z
-    container_name: minio
-    restart: unless-stopped
-    ports:
-      - 9000:9000
-      - 9001:9001
-    environment:
-      MINIO_ROOT_USER: minio_admin
-      MINIO_ROOT_PASSWORD: minio_passw0rd
-    command: server /data --console-address ":9001"
-    volumes:
-      - minio-data:/data
-    healthcheck:
-      test: ["CMD", "mc", "ready", "local"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  minio-initialize:
-    image: docker.io/minio/mc:RELEASE.2025-08-13T08-35-41Z
-    container_name: minio-initialize
-    restart: "no"
-    depends_on:
-      minio:
-        condition: service_healthy
-    entrypoint: >
-      /bin/sh -c "
-      mc alias set hm_minio http://minio:9000 minio_admin minio_passw0rd;
-      mc mb hm_minio/warehouse --ignore-existing;
-      exit 0;
-      "
-
-  lakekeeper-postgres:
-    image: docker.io/library/postgres:18.1-trixie
-    container_name: lakekeeper-postgres
-    restart: unless-stopped
-    environment:
-      POSTGRES_USER: postgres_admin
-      POSTGRES_PASSWORD: postgres_passw0rd
-      POSTGRES_DB: lakekeeper
-    volumes:
-      - postgres-data:/var/lib/postgresql
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres_admin -p 5432 -d lakekeeper"]
-      interval: 2s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
-
-  lakekeeper-migrate:
-    image: quay.io/lakekeeper/catalog:v0.10.4
-    container_name: lakekeeper-migrate
-    restart: "no"
-    depends_on:
-      lakekeeper-postgres:
-        condition: service_healthy
-    environment:
-      LAKEKEEPER__PG_ENCRYPTION_KEY: lakekeeper_secr3t
-      LAKEKEEPER__PG_DATABASE_URL_READ: postgresql://postgres_admin:postgres_passw0rd@lakekeeper-postgres:5432/lakekeeper
-      LAKEKEEPER__PG_DATABASE_URL_WRITE: postgresql://postgres_admin:postgres_passw0rd@lakekeeper-postgres:5432/lakekeeper
-      RUST_LOG: info
-    command: ["migrate"]
-
   lakekeeper:
     image: quay.io/lakekeeper/catalog:v0.10.4
     container_name: lakekeeper
-    restart: unless-stopped
     depends_on:
-      lakekeeper-postgres:
-        condition: service_healthy
       lakekeeper-migrate:
         condition: service_completed_successfully
+      lakekeeper-postgres:
+        condition: service_healthy
       minio:
         condition: service_healthy
-    ports:
-      - 8181:8181
     environment:
       LAKEKEEPER__PG_ENCRYPTION_KEY: lakekeeper_secr3t
       LAKEKEEPER__PG_DATABASE_URL_READ: postgresql://postgres_admin:postgres_passw0rd@lakekeeper-postgres:5432/lakekeeper
       LAKEKEEPER__PG_DATABASE_URL_WRITE: postgresql://postgres_admin:postgres_passw0rd@lakekeeper-postgres:5432/lakekeeper
       RUST_LOG: info
+    ports:
+      - '127.0.0.1:8181:8181'
     command: ["serve"]
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "/home/nonroot/lakekeeper", "healthcheck"]
       interval: 1s
@@ -94,7 +31,6 @@ services:
   lakekeeper-bootstrap:
     image: docker.io/curlimages/curl:8.17.0
     container_name: lakekeeper-bootstrap
-    restart: "no"
     depends_on:
       lakekeeper:
         condition: service_healthy
@@ -111,11 +47,11 @@ services:
       - '{"accept-terms-of-use": true}'
       - "-o"
       - "/dev/null"
+    restart: "no"
 
   lakekeeper-initialize:
     image: docker.io/curlimages/curl:8.17.0
     container_name: lakekeeper-initialize
-    restart: "no"
     depends_on:
       lakekeeper:
         condition: service_healthy
@@ -126,18 +62,82 @@ services:
     volumes:
       - ./scripts/create-lakekeeper-warehouse.sh:/create-lakekeeper-warehouse.sh:ro
     command: ["/bin/sh", "/create-lakekeeper-warehouse.sh"]
+    restart: "no"
+
+  lakekeeper-migrate:
+    image: quay.io/lakekeeper/catalog:v0.10.4
+    container_name: lakekeeper-migrate
+    depends_on:
+      lakekeeper-postgres:
+        condition: service_healthy
+    environment:
+      LAKEKEEPER__PG_ENCRYPTION_KEY: lakekeeper_secr3t
+      LAKEKEEPER__PG_DATABASE_URL_READ: postgresql://postgres_admin:postgres_passw0rd@lakekeeper-postgres:5432/lakekeeper
+      LAKEKEEPER__PG_DATABASE_URL_WRITE: postgresql://postgres_admin:postgres_passw0rd@lakekeeper-postgres:5432/lakekeeper
+      RUST_LOG: info
+    command: ["migrate"]
+    restart: "no"
+
+  lakekeeper-postgres:
+    image: docker.io/library/postgres:18.1-trixie
+    container_name: lakekeeper-postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql
+    environment:
+      POSTGRES_USER: postgres_admin
+      POSTGRES_PASSWORD: postgres_passw0rd
+      POSTGRES_DB: lakekeeper
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres_admin -p 5432 -d lakekeeper"]
+      interval: 2s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
+  minio:
+    image: docker.io/minio/minio:RELEASE.2025-09-07T16-13-09Z
+    container_name: minio
+    volumes:
+      - minio-data:/data
+    environment:
+      MINIO_ROOT_USER: minio_admin
+      MINIO_ROOT_PASSWORD: minio_passw0rd
+    ports:
+      - '127.0.0.1:9000:9000'
+      - '127.0.0.1:9001:9001'
+    command: server /data --console-address ":9001"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  minio-initialize:
+    image: docker.io/minio/mc:RELEASE.2025-08-13T08-35-41Z
+    container_name: minio-initialize
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set hm_minio http://minio:9000 minio_admin minio_passw0rd;
+      mc mb hm_minio/warehouse --ignore-existing;
+      exit 0;
+      "
+    restart: "no"
 
   trino:
     image: docker.io/trinodb/trino:478
     container_name: trino
-    restart: unless-stopped
     depends_on:
       lakekeeper-initialize:
         condition: service_completed_successfully
-    ports:
-      - 8080:8080
     volumes:
       - ./etc/trino/catalog:/etc/trino/catalog:ro
+    ports:
+      - '127.0.0.1:8080:8080'
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "trino", "--execute", "SELECT 1"]
       interval: 10s
@@ -148,13 +148,13 @@ services:
   trino-initialize:
     image: docker.io/trinodb/trino:478
     container_name: trino-initialize
-    restart: "no"
     depends_on:
       trino:
         condition: service_healthy
     volumes:
       - ./scripts/insert-sensor-data.sql:/insert-sensor-data.sql:ro
     entrypoint: ["trino", "--server", "trino:8080", "--file", "/insert-sensor-data.sql"]
+    restart: "no"
 
 volumes:
   minio-data:
