--- a/data-catalog/polaris/docker-compose.development.yaml
+++ b/data-catalog/polaris/docker-compose.development.yaml
@@ -1,19 +1,20 @@
 # https://docs.docker.com/reference/compose-file/
 ---
+name: polaris-development
 services:
   minio:
     image: docker.io/minio/minio:RELEASE.2025-09-07T16-13-09Z
     container_name: minio
-    restart: unless-stopped
-    ports:
-      - 9000:9000
-      - 9001:9001
+    volumes:
+      - minio-data:/data
     environment:
       MINIO_ROOT_USER: minio_admin
       MINIO_ROOT_PASSWORD: minio_passw0rd
+    ports:
+      - '127.0.0.1:9000:9000'
+      - '127.0.0.1:9001:9001'
     command: server /data --console-address ":9001"
-    volumes:
-      - minio-data:/data
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "mc", "ready", "local"]
       interval: 10s
@@ -23,7 +24,6 @@ services:
   minio-initialize:
     image: docker.io/minio/mc:RELEASE.2025-08-13T08-35-41Z
     container_name: minio-initialize
-    restart: "no"
     depends_on:
       minio:
         condition: service_healthy
@@ -33,49 +33,16 @@ services:
       mc mb hm_minio/warehouse --ignore-existing;
       exit 0;
       "
-
-  polaris-postgres:
-    image: docker.io/library/postgres:18.1-trixie
-    container_name: polaris-postgres
-    restart: unless-stopped
-    environment:
-      POSTGRES_USER: postgres_admin
-      POSTGRES_PASSWORD: postgres_passw0rd
-      POSTGRES_DB: polaris
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres_admin -p 5432 -d polaris"]
-      interval: 2s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
-    volumes:
-      - postgres-data:/var/lib/postgresql
-
-  polaris-bootstrap:
-    image: docker.io/apache/polaris-admin-tool:1.2.0-incubating
-    container_name: polaris-bootstrap
     restart: "no"
-    depends_on:
-      polaris-postgres:
-        condition: service_healthy
-    environment:
-      POLARIS_PERSISTENCE_TYPE: relational-jdbc
-      QUARKUS_DATASOURCE_USERNAME: postgres_admin
-      QUARKUS_DATASOURCE_PASSWORD: postgres_passw0rd
-      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://polaris-postgres:5432/polaris
-    command: ["bootstrap", "--realm", "POLARIS", "--credential", "POLARIS,root,polaris_passw0rd"]
 
   polaris:
     image: docker.io/apache/polaris:1.2.0-incubating
     container_name: polaris
-    restart: unless-stopped
     depends_on:
-      polaris-bootstrap:
-        condition: service_completed_successfully
       minio:
         condition: service_healthy
-    ports:
-      - 8181:8181
+      polaris-bootstrap:
+        condition: service_completed_successfully
     environment:
       AWS_REGION: us-west-2
       AWS_ACCESS_KEY_ID: minio_admin
@@ -85,6 +52,9 @@ services:
       QUARKUS_DATASOURCE_USERNAME: postgres_admin
       QUARKUS_DATASOURCE_PASSWORD: postgres_passw0rd
       QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://polaris-postgres:5432/polaris
+    ports:
+      - '127.0.0.1:8181:8181'
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8182/q/health"]
       interval: 10s
@@ -92,30 +62,61 @@ services:
       retries: 5
       start_period: 30s
 
+  polaris-bootstrap:
+    image: docker.io/apache/polaris-admin-tool:1.2.0-incubating
+    container_name: polaris-bootstrap
+    depends_on:
+      polaris-postgres:
+        condition: service_healthy
+    environment:
+      POLARIS_PERSISTENCE_TYPE: relational-jdbc
+      QUARKUS_DATASOURCE_USERNAME: postgres_admin
+      QUARKUS_DATASOURCE_PASSWORD: postgres_passw0rd
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://polaris-postgres:5432/polaris
+    command: ["bootstrap", "--realm", "POLARIS", "--credential", "POLARIS,root,polaris_passw0rd"]
+    restart: "no"
+
   polaris-initialize:
     image: docker.io/curlimages/curl:8.17.0
     container_name: polaris-initialize
-    restart: "no"
     depends_on:
-      polaris:
-        condition: service_healthy
       minio-initialize:
         condition: service_completed_successfully
-    command: ["/bin/sh", "/create-polaris-catalog.sh"]
+      polaris:
+        condition: service_healthy
     volumes:
       - ./scripts/create-polaris-catalog.sh:/create-polaris-catalog.sh:ro
+    command: ["/bin/sh", "/create-polaris-catalog.sh"]
+    restart: "no"
+
+  polaris-postgres:
+    image: docker.io/library/postgres:18.1-trixie
+    container_name: polaris-postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql
+    environment:
+      POSTGRES_USER: postgres_admin
+      POSTGRES_PASSWORD: postgres_passw0rd
+      POSTGRES_DB: polaris
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres_admin -p 5432 -d polaris"]
+      interval: 2s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
 
   trino:
     image: docker.io/trinodb/trino:478
     container_name: trino
-    restart: unless-stopped
     depends_on:
       polaris-initialize:
         condition: service_completed_successfully
-    ports:
-      - 8080:8080
     volumes:
       - ./etc/trino/catalog:/etc/trino/catalog:ro
+    ports:
+      - '127.0.0.1:8080:8080'
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "trino", "--execute", "SELECT 1"]
       interval: 10s
@@ -126,13 +127,13 @@ services:
   trino-initialize:
     image: docker.io/trinodb/trino:478
     container_name: trino-initialize
-    restart: "no"
     depends_on:
       trino:
         condition: service_healthy
-    entrypoint: ["trino", "--server", "trino:8080", "--file", "/insert-sensor-data.sql"]
     volumes:
       - ./scripts/insert-sensor-data.sql:/insert-sensor-data.sql:ro
+    entrypoint: ["trino", "--server", "trino:8080", "--file", "/insert-sensor-data.sql"]
+    restart: "no"
 
 volumes:
   minio-data:
