--- a/data-visualization/grafana/hm-panel-plugin/docker-compose.yaml
+++ b/data-visualization/grafana/hm-panel-plugin/docker-compose.yaml
@@ -1,17 +1,15 @@
 # https://docs.docker.com/reference/compose-file/
 ---
+name: hm-panel-plugin
 services:
   grafana:
-    user: root
-    container_name: hm-panel-plugin
     build:
       context: ./.config
       args:
         grafana_image: ${GRAFANA_IMAGE:-grafana-enterprise}
         grafana_version: ${GRAFANA_VERSION:-11.3.1}
         development: ${DEVELOPMENT:-false}
-    ports:
-      - 3000:3000/tcp
+    container_name: hm-panel-plugin
     volumes:
       - ./dist:/var/lib/grafana/plugins/hm-panel-plugin
       - ./provisioning:/etc/grafana/provisioning
@@ -22,3 +20,6 @@ services:
       GF_LOG_LEVEL: debug
       GF_DATAPROXY_LOGGING: 1
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: hm-panel-plugin
+    ports:
+      - '127.0.0.1:3000:3000/tcp'
+    user: root
