--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "commit": "commit",
     "lint-css": "stylelint '**/*.css'",
     "lint-css-fix": "stylelint --fix '**/*.css'",
+    "lint-docker-compose": "dclint . --recursive --config=dclint.config.json .",
+    "lint-docker-compose-fix": "dclint . --recursive --config=dclint.config.json --fix",
     "lint-html": "eslint .",
     "lint-html-fix": "eslint . --fix",
     "lint-json-eslint": "eslint .",
@@ -28,6 +30,7 @@
     "@html-eslint/parser": "0.51.0",
     "@prettier/plugin-xml": "3.4.2",
     "commitizen": "4.3.1",
+    "dclint": "3.1.0",
     "eslint": "9.39.2",
     "markdownlint-cli2": "0.20.0",
     "prettier": "3.7.4",
