--- a/.mergify.yml
+++ b/.mergify.yml
@@ -686,11 +686,14 @@ pull_request_rules:
           - check-success=Test Machine Learning / JiWER | Test
           - check-skipped=Test Machine Learning / JiWER | Test
       - or:
+          - check-success=Test Machine Learning / Stable Diffusion | Test
+          - check-skipped=Test Machine Learning / Stable Diffusion | Test
+      - or:
           - check-success=Test Machine Learning / torchdiffeq | Test
           - check-skipped=Test Machine Learning / torchdiffeq | Test
       - or:
-          - check-success=Test Machine Learning / Stable Diffusion | Test
-          - check-skipped=Test Machine Learning / Stable Diffusion | Test
+          - check-success=Test Machine Learning / Flow Matching | Test
+          - check-skipped=Test Machine Learning / Flow Matching | Test
       - or:
           - check-success=Test Machine Learning / Transformer | Test
           - check-skipped=Test Machine Learning / Transformer | Test
