--- a/.github/workflows/.test-machine-learning.yml
+++ b/.github/workflows/.test-machine-learning.yml
@@ -225,6 +225,9 @@ name: . Test Machine Learning
       rnnoise-vad:
         required: true
         type: boolean
+      smollm:
+        required: true
+        type: boolean
       speculative-decoding:
         required: true
         type: boolean
@@ -1369,6 +1372,39 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: hongbo-miao/hongbomiao.com
           directory: large-language-model-inference/speculative-decoding
+
+  smollm-test:
+    name: SmolLM | Test
+    if: ${{ inputs.workflow || inputs.smollm }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7.1.6
+        with:
+          version: 0.9.17
+          enable-cache: true
+          cache-dependency-glob: small-language-model/smollm/uv.lock
+      - name: Set up Python
+        uses: actions/setup-python@v6.1.0
+        with:
+          python-version-file: small-language-model/smollm/.python-version
+      - name: Install dependencies
+        working-directory: small-language-model/smollm
+        run: |
+          uv sync --dev
+      - name: Test
+        working-directory: small-language-model/smollm
+        run: |
+          uv run poe test-coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5.5.2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: hongbo-miao/hongbomiao.com
+          directory: small-language-model/smollm
 
   analyze-sentiment-test:
     name: Analyze Sentiment | Test
