--- a/.mergify.yml
+++ b/.mergify.yml
@@ -617,6 +617,9 @@ pull_request_rules:
           - check-success=Test Machine Learning / Speculative Decoding | Test
           - check-skipped=Test Machine Learning / Speculative Decoding | Test
       - or:
+          - check-success=Test Machine Learning / SmolLM | Test
+          - check-skipped=Test Machine Learning / SmolLM | Test
+      - or:
           - check-success=Test Machine Learning / Analyze Sentiment | Test
           - check-skipped=Test Machine Learning / Analyze Sentiment | Test
       - or:
