--- a/data-catalog/polaris/docker-compose.development.yaml
+++ b/data-catalog/polaris/docker-compose.development.yaml
@@ -85,7 +85,7 @@ services:
       polaris:
         condition: service_healthy
     volumes:
-      - ./scripts/create-polaris-catalog.sh:/create-polaris-catalog.sh:ro
+      - ./polaris/scripts/create-polaris-catalog.sh:/create-polaris-catalog.sh:ro
     command: ["/bin/sh", "/create-polaris-catalog.sh"]
     restart: "no"
 
@@ -93,7 +93,7 @@ services:
     image: docker.io/library/postgres:18.1-trixie
     container_name: polaris-postgres
     volumes:
-      - postgres-data:/var/lib/postgresql
+      - polaris-postgres-data:/var/lib/postgresql
     environment:
       POSTGRES_USER: postgres_admin
       POSTGRES_PASSWORD: postgres_passw0rd
@@ -113,7 +113,7 @@ services:
       polaris-initialize:
         condition: service_completed_successfully
     volumes:
-      - ./etc/trino/catalog:/etc/trino/catalog:ro
+      - ./trino/etc/trino/catalog:/etc/trino/catalog:ro
     ports:
       - '127.0.0.1:8080:8080'
     restart: unless-stopped
@@ -131,10 +131,10 @@ services:
       trino:
         condition: service_healthy
     volumes:
-      - ./scripts/insert-sensor-data.sql:/insert-sensor-data.sql:ro
+      - ./trino/scripts/insert-sensor-data.sql:/insert-sensor-data.sql:ro
     entrypoint: ["trino", "--server", "trino:8080", "--file", "/insert-sensor-data.sql"]
     restart: "no"
 
 volumes:
   minio-data:
-  postgres-data:
+  polaris-postgres-data:
