--- a/.mergify.yml
+++ b/.mergify.yml
@@ -197,6 +197,9 @@ pull_request_rules:
           - check-success=Static Type Check / OpenTofu (production/nebius/kubernetes)
           - check-skipped=Static Type Check / OpenTofu (production/nebius/kubernetes)
       - or:
+          - check-success=Static Type Check / OpenTofu (production/nebius/network)
+          - check-skipped=Static Type Check / OpenTofu (production/nebius/network)
+      - or:
           - check-success=Static Type Check / OpenTofu (production/nebius/storage)
           - check-skipped=Static Type Check / OpenTofu (production/nebius/storage)
       - or:
