--- a/.mergify.yml
+++ b/.mergify.yml
@@ -620,8 +620,8 @@ pull_request_rules:
           - check-success=Test Machine Learning / Speculative Decoding | Test
           - check-skipped=Test Machine Learning / Speculative Decoding | Test
       - or:
-          - check-success=Test Machine Learning / SmolLM | Test
-          - check-skipped=Test Machine Learning / SmolLM | Test
+          - check-success=Test Machine Learning / Gemma | Test
+          - check-skipped=Test Machine Learning / Gemma | Test
       - or:
           - check-success=Test Machine Learning / Analyze Sentiment | Test
           - check-skipped=Test Machine Learning / Analyze Sentiment | Test
