feat(lint): lint envfile

--- a/.github/workflows/.lint.yml
+++ b/.github/workflows/.lint.yml
@@ -346,6 +346,19 @@ jobs:
         with:
           dockerfile: '**/Dockerfile*'
 
+  lint-dotenv:
+    name: dotenv
+    if: ${{ inputs.workflow || inputs.dockerfile }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
+      - name: Lint dotenv
+        uses: dotenv-linter/action-dotenv-linter@v2.25.0
+        with:
+          fail_on_error: true
+
   lint-editorconfig:
     name: EditorConfig
     if: ${{ inputs.workflow || inputs.editorconfig }}
