--- a/.mergify.yml
+++ b/.mergify.yml
@@ -35,6 +35,9 @@ pull_request_rules:
           - check-success=Lint / Dockerfile
           - check-skipped=Lint / Dockerfile
       - or:
+          - check-success=Lint / dotenv
+          - check-skipped=Lint / dotenv
+      - or:
           - check-success=Lint / EditorConfig
           - check-skipped=Lint / EditorConfig
       - or:
