--- a/data-storage/delta-lake/write-to-delta-lake/pyproject.toml
+++ b/data-storage/delta-lake/write-to-delta-lake/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 dependencies = [
   "deltalake[pandas]==1.2.1",
   "pyarrow==22.0.0",
-  "python-dotenv==1.2.1",
+  "pydantic-settings==2.12.0",
 ]
 
 [dependency-groups]
