--- a/data-visualization/iads/iads-rtstation/zeromq-iads-bridge/.env.development
+++ b/data-visualization/iads/iads-rtstation/zeromq-iads-bridge/.env.development
@@ -1,9 +1,9 @@
+API_SERVER_PORT=2737
+IADS_CONFIG_FILE_PATH=C:\iads\iads.iadsConfig
+IADS_DATA_OUTPUT_DIR=C:\iads\output
+IADS_EXE_PATH='C:\Program Files\IADS\ClientWorkstation\Iads.exe'
+IADS_PARAMETER_DEFINITION_FILE_NAME=iads.prn
+IADS_PORT=49060
+IADS_WIZARD_FILE_NAME=iads.WizardFile
 ZEROMQ_HOST=localhost
 ZEROMQ_PORT=7593
-IADS_PORT=49060
-IADS_EXE_PATH='C:\Program Files\IADS\ClientWorkstation\Iads.exe'
-IADS_WIZARD_FILE_NAME=iads.WizardFile
-IADS_PARAMETER_DEFINITION_FILE_NAME=iads.prn
-IADS_CONFIG_FILE_PATH='C:\iads\iads.iadsConfig'
-IADS_DATA_OUTPUT_DIR='C:\iads\output'
-API_SERVER_PORT=2737
