--- a/cloud-computing/hm-ray/applications/process-flight-data/pyproject.toml
+++ b/cloud-computing/hm-ray/applications/process-flight-data/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 dependencies = [
   "mlflow==3.7.0",
   "polars==1.36.1",
-  "python-dotenv==1.2.1",
+  "pydantic-settings==2.12.0",
   "ray[default]==2.52.1",
 ]
 
