--- a/data-storage/delta-lake/read-delta-lake-by-trino/pyproject.toml
+++ b/data-storage/delta-lake/read-delta-lake-by-trino/pyproject.toml
@@ -2,9 +2,9 @@
 name = "read-delta-lake-by-trino"
 version = "1.0.0"
 dependencies = [
-  "trino[sqlalchemy]==0.336.0",
   "pandas==2.3.3",
-  "python-dotenv==1.2.1",
+  "pydantic-settings==2.12.0",
+  "trino[sqlalchemy]==0.336.0",
 ]
 
 [dependency-groups]
