--- a/hardware-in-the-loop/national-instruments/veristand/VeriStandZeroMQBridge/VeriStandZeroMQBridge/.env.production
+++ b/hardware-in-the-loop/national-instruments/veristand/VeriStandZeroMQBridge/VeriStandZeroMQBridge/.env.production
@@ -1,7 +1,7 @@
-VERISTAND_GATEWAY_HOST=localhost
-SYSTEM_DEFINITION_PATH=C:\Users\Public\Documents\National Instruments\NI VeriStand 2024\Examples\Stimulus Profile\Engine Demo\Engine Demo.nivssdf
-VERISTAND_CONNECTION_TIMEOUT_MS=60000
-ZEROMQ_PORT=7593
-PRODUCER_NUMBER=2
-TARGET_FREQUENCY_HZ=100
 CALIBRATION_TIME_S=2
+PRODUCER_NUMBER=2
+SYSTEM_DEFINITION_PATH="C:\Users\Public\Documents\National Instruments\NI VeriStand 2024\Examples\Stimulus Profile\Engine Demo\Engine Demo.nivssdf"
+TARGET_FREQUENCY_HZ=100
+VERISTAND_CONNECTION_TIMEOUT_MS=60000
+VERISTAND_GATEWAY_HOST=localhost
+ZEROMQ_PORT=7593
