--- a/load-testing/hm-locust/pyproject.toml
+++ b/load-testing/hm-locust/pyproject.toml
@@ -3,7 +3,7 @@ name = "hm-locust"
 version = "1.0.0"
 dependencies = [
   "locust==2.42.6",
-  "python-dotenv==1.2.1",
+  "pydantic-settings==2.12.0",
   "python-magic==0.4.27",
 ]
 
