--- a/machine-learning/hm-mlflow/experiments/predict-diabetes/pyproject.toml
+++ b/machine-learning/hm-mlflow/experiments/predict-diabetes/pyproject.toml
@@ -3,6 +3,7 @@ name = "predict-diabetes"
 version = "1.0.0"
 dependencies = [
   "mlflow==3.7.0",
+  "pydantic-settings==2.12.0",
   "scikit-learn==1.8.0",
 ]
 
@@ -11,7 +12,6 @@ dev = [
   "poethepoet==0.38.0",
   "pytest-cov==7.0.0",
   "pytest==9.0.2",
-  "python-dotenv==1.2.1",
 ]
 
 [tool.uv]
@@ -22,5 +22,3 @@ required-version = ">=0.8.0"
 dev = "python src/main.py"
 test = "pytest --verbose --verbose"
 test-coverage = "pytest --cov=. --cov-report=xml"
-
-mlflow-ui = "mlflow ui"
