chore(git): ignore .coverage file

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -30,6 +30,7 @@
     "**/.DS_Store",
     "**/.ansible/**/*",
     "**/.claude/**/*",
+    "**/.coverage",
     "**/.coverage/**/*",
     "**/.deepeval/**/*",
     "**/.env.*.local",
