--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,7 @@ AllCops:
     - '**/.DS_Store'
     - '**/.ansible/**/*'
     - '**/.claude/**/*'
+    - '**/.coverage'
     - '**/.coverage/**/*'
     - '**/.deepeval/**/*'
     - '**/.env.*.local'
