--- a/.ruff.toml
+++ b/.ruff.toml
@@ -20,6 +20,7 @@ exclude = [
   "**/.DS_Store",
   "**/.ansible/**/*",
   "**/.claude/**/*",
+  "**/.coverage",
   "**/.coverage/**/*",
   "**/.deepeval/**/*",
   "**/.env.*.local",
