--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -23,6 +23,7 @@ ignore: |
   **/.DS_Store
   **/.ansible/**/*
   **/.claude/**/*
+  **/.coverage
   **/.coverage/**/*
   **/.deepeval/**/*
   **/.env.*.local
